Prevent the add undocumented parameter button from overflowing
Bug: T309604

--- a/modules/ve-mw/ui/styles/dialogs/ve.ui.MWTransclusionDialog.css
+++ b/modules/ve-mw/ui/styles/dialogs/ve.ui.MWTransclusionDialog.css
@@ -46,6 +46,11 @@
 	margin-right: 0;
 }
 
+.ve-ui-mwTransclusionDialog-addParameterFieldset-header .oo-ui-buttonElement-button {
+	white-space: normal;
+	word-break: break-word;
+}
+
 .ve-ui-mwTransclusionDialog-addParameterFieldset-header.oo-ui-iconElement .oo-ui-iconElement-icon {
 	height: 100%;
 }
